Fix text overflows width on mobile devices

--- a/src/css/local-connect.css
+++ b/src/css/local-connect.css
@@ -38,10 +38,6 @@ h3 {
     margin-bottom: 0;
 }
 
-p.pre {
-    white-space: pre;
-}
-
 #profile, #posts {
     padding: 20px 7px 5px;
 }
